feat: Update Ticket Class Management UI and Permissions
- Refactor TicketClassManagement component for improved accessibility and styling.
- Add allowClear option to TypeAhead components in FlightForm and FlightDetailsTable.
- Create initial BookingForm test file.
- Update DebugLogin to use correct role for employee redirection.
- Enhance Header component with role-based navigation and Vietnamese translations.
- Modify ProtectedRoute to reflect updated role naming conventions.
- Revise useAuth hook for updated permissions and logging.
- Update Employee and Flight models to include new fields and naming conventions.
- Refactor FlightService and ParameterService to streamline API interactions.
- Enhance EmployeeService with logging for CRUD operations and role updates.